fix: align comparison__right content to right with max-width 360px

--- a/css/style.css
+++ b/css/style.css
@@ -541,11 +541,13 @@ body {
 }
 
 .comparison__right {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    align-items: center;
-}
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        max-width: 360px;
+        align-items: flex-end;
+        text-align: right;
+    }
 
 .comparison__question {
     font-size: 32px;
